trunk/Archive2/c9/24da7e25661441/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:15:16: error: incomplete type 'foo<0, int*>' used in nested name specifier
   std::cout << foo<std::size_t(0), int*>::bar() << std::endl;
                ^
main.cpp:16:16: error: incomplete type 'foo<0, int*>' used in nested name specifier
   std::cout << foo<0, int*>::bar() << std::endl;
                ^
